--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,17 @@
   <div><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
+  <div><%= f.label :full_name %><br />
+    <%= f.text_field :full_name %></div>
+
+  <div><%= f.label :phone %><br />
+    <%= f.text_field :phone %></div>
+
+  <div><%= f.label :birthday %><br />
+    <%= f.text_field :birthday %></div>
+
+  <%= f.hidden_field :creation_date, value: Time.now %>
+
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
