--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 <body>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+<% if user_signed_in? %>
+  sign in as <%= current_user.full_name %>
+  <%= link_to "sign out", destroy_user_session_path, :method => :delete %>
+  <% else %>
+    <%= link_to "sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+  <% end %>
 <%= yield %>
 
 </body>
