Modify devise sending mail

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -11,8 +11,8 @@ Do you have questions, or need more information? Please feel free to contact us.
 
 <p> Your Information: </p>
 <p>
-  you full name: <%= @full_name %>
-  Phone number: <%= @phone %>
-  Birthday: <%= @birthday %>
-  Creation Date: <%= @creation_date %>
+  you full name: <%= @user.full_name %>
+  Phone number: <%= @user.phone %>
+  Birthday: <%= @user.birthday %>
+  Creation Date: <%= @user.creation_date %>
 </p>
