Config sign in layout

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,8 +39,8 @@
 		}
 
 		.dropdown-menu{
-			border-color: #3398B3;
 			position: absolute;
+			border-color: #3398B3;
 			border-radius: 0px;
 		}
 
@@ -52,6 +52,7 @@
 		}
 
 		#search{
+			margin-left: 1px;
 			border: 0px;
 		}
 
@@ -98,6 +99,33 @@
 	width: 300px;
 }
 
+.modal-dialog {
+	width: 300px;
 
+	.header{
+		margin-top: 0px;
+		background-color: #5ABCD3;
+		font: normal 36px "Lobster 1.3";
+	}
+
+	h2{
+		text-align: center;
+		margin-top: 0px;
+		font: normal 36px "Lobster 1.3";
+		color: #FFF;
+	}
+
+	.Signin{
+		margin-left: 20px;
+	}
+
+	.bluebox{
+		background-color: #BDE5ED;
+		border: 0px;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		width: 250px;
+	}
+}
 
 
