--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,13 +29,7 @@ html
         .col-md-4
           #rightpanel
             = link_to "BROWSE", store_index_path
-            | \
-            - if user_signed_in?
-              | sign in as #{current_user.full_name}
-              | \#{link_to "SIGN OUT", destroy_user_session_path, :method => :delete}
-            - else
-              /! <haml:loud> link_to &amp;quot;SIGN IN&amp;quot;, new_user_session_path </haml:loud
-              = link_to 'SIGN IN', new_user_session_path, 'data-toggle' => 'modal', 'data-target' => '#myModal'
+            = render "devise/sessions/sessions"
       .page
         | INDEX
     .container
