--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -33,6 +33,7 @@
     font: normal 14px "Roboto medium";
     color: #3398B3;
 
+
     .custom{
       background: #FFF;
       text-stroke: #3399B3;
@@ -49,10 +50,13 @@
     }
 
     button{
-      vertical-align: middle;
       background-color: #5ABCD3;
       font: normal 17px "Roboto medium";
       color: #BDE5ED;
+    }
+
+    .search{
+      margin: 2px;
     }
 
     #search{
@@ -119,7 +123,11 @@
     color: #FFF;
   }
 
-  .Signin{
+  .sign_in{
+    margin-left: 20px;
+  }
+
+  .sign_up{
     margin-left: 20px;
   }
 
@@ -130,6 +138,41 @@
     padding-bottom: 5px;
     width: 250px;
   }
+
+  .input-group{
+    margin-top: 10px;
+    margin-right: 100px;
+  }
+
+  .error{
+    color: red;
+  }
+
+  .btn-primary{
+    background-color: #5ABCD3;
+    border-color: #5ABCD3;
+    color: #FFF;
+    margin-top: 10px;
+  }
 }
 
+.col-sm-3{
+  margin-top: 17px;
+}
+
+.col-sm-9{
+  margin-top: 10px;
+}
+
+.edit_user{
+  li{
+    color: red;
+  }
+
+  h2{
+    margin-top: 0px;
+    font: normal 25px "Roboto black";
+    color: #3398B3;
+  }
+}
 
