[r] change css id following convention

--- a/app/views/devise/registrations/_success.html.slim
+++ b/app/views/devise/registrations/_success.html.slim
@@ -1,4 +1,4 @@
-#signUpSucc.modal.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
+#sign-up-success.modal.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
   .modal-dialog
     .modal-content
       .modal-header
