--- a/app/views/devise/registrations/create.js.erb
+++ b/app/views/devise/registrations/create.js.erb
@@ -2,8 +2,8 @@
   $('#registration .error').html('<%= escape_javascript(render('errors', user: @user)) %>')
 <% else %>
   $('.container').html('<%= escape_javascript(render('success', path: @after_sign_up_path)) %>')
-  $('#signUpModal').modal('hide');
-  $('#signInModal').modal('hide');
-  $('#signUpSucc .modal-body').html('<%= flash[:notice] %>')
-  $('#signUpSucc').modal('show');
+  $('#sign-up-modal').modal('hide');
+  $('#sign-in-modal').modal('hide');
+  $('#sign-up-success .modal-body').html('<%= flash[:notice] %>')
+  $('#sign-up-success').modal('show');
 <% end %>
