--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,7 +26,7 @@ html
             input.search type="text"
               button#search type="submit"  Go
         .col-md-4
-          #rightpanel
+          #right-panel
             = link_to "BROWSE ", store_index_path
             = render "devise/sessions/sessions"
       .page
