--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,7 +28,7 @@ html
           #right-panel
             = link_to "BROWSE ", store_index_path
             = render "devise/sessions/sessions"
-      .page
+      .page-name-row
         | INDEX
     .container
       p.notice= notice
