--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,13 +1,9 @@
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to 'Sign up', new_registration_path(resource_name) , 'data-toggle' => 'modal', 'data-target' => '#sign-up-modal', id: 'sign_up' %> <br/>
-<% end -%>
-
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
+  <%= link_to "Didn't receive confirmation?", new_confirmation_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
@@ -18,4 +14,9 @@
   <%- resource_class.omniauth_providers.each do |provider| %>
     <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
   <% end -%>
+<% end -%>
+<hr>
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <h3>NOT A MEMBER?</h3>
+  <%= link_to image_tag("sign-up.png"), new_registration_path(resource_name) , 'data-toggle' => 'modal', 'data-target' => '#sign-up-modal', id: 'sign_up', class: "sign-up-button" %> <br/>
 <% end -%>
