[r] Add value for sign in submit button

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -183,6 +183,7 @@
 
   .image-button{
     float: right;
+    color:transparent;
     background-image: url('/assets/btn-signin.png');
     width: 80px;
     height: 40px;
