[r] Modify instruction mailer style

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -11,8 +11,8 @@ Do you have questions, or need more information? Please feel free to contact us.
 
 <p> Your Information: </p>
 <p>
-  you full name: <%= @user.full_name %>
-  Phone number: <%= @user.phone %>
-  Birthday: <%= @user.birthday %>
+  you full name: <%= @user.full_name %> <br/>
+  Phone number: <%= @user.phone %> <br/>
+  Birthday: <%= @user.birthday %> <br/>
   Creation Date: <%= @user.creation_date %>
 </p>
