--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,19 +11,13 @@ html
         .col-md-8
           = link_to image_tag("logo.png"), store_index_path
           #searchpanel
-            .btn-group
-              button.btn.custom data-toggle="dropdown" type="button"
-                | Category
-                span.caret
-              ul.dropdown-menu role="menu"
-                - @categories.each do |category|
-                  li
-                    = link_to category.name
-            input.search type="text"
-              button#search type="submit"  Go
+            = form_tag books_path, method: :get do
+              .btn-group
+                = select_tag :category, options_from_collection_for_select(@categories,'id','name' ), prompt: "All categories", class: 'form-control'
+              = text_field_tag 'search', nil, placeholder: 'Enter search term...', class: 'search'
+              button type="submit" Go
         .col-md-4
           #right-panel
-
             = link_to "BROWSE ", store_index_path
             = render "devise/sessions/sessions"
       .page-name-row
