--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,16 +10,10 @@ html
       .row
         .col-md-8
           = link_to image_tag('logo.png'), store_index_path
-          #searchpanel
-            = form_tag new_search_path, method: :get do
-              .btn-group
-                = select_tag :category, options_from_collection_for_select(@categories,'id','name', selected: params[:category] ), prompt: 'All categories', class: 'form-control'
-              = text_field_tag 'search', nil, placeholder: 'Enter search term...', class: 'search'
-              button type='submit' Go
+          = render "search/search"
         .col-md-4
           #right-panel
             = link_to 'BROWSE', store_index_path
-            div.vr
             = render 'devise/sessions/sessions'
       .page-name-row
         | INDEX
