--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -45,4 +45,10 @@
     .col-md-2
       |Reviews
     .col-md-8
-      |under construction
+      - if !current_user.nil?
+        = link_to 'ADD REVIEW', new_comment_path( book_id: @book.id), 'data-toggle' => 'modal', 'data-target' => '#add-review-modal', id: 'add-review'
+      - else
+        | Please sign in to add a review
+      #add-review-modal.modal.fade aria-hidden='true' aria-labelledby='myModalLabel' role='dialog' tabindex='-1'
+        .modal-dialog
+          .modal-content
