--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -45,10 +45,9 @@
     .col-md-2
       |Reviews
     .col-md-8
-      - if !current_user.nil?
-        = link_to 'ADD REVIEW', new_comment_path( book_id: @book.id), 'data-toggle' => 'modal', 'data-target' => '#add-review-modal', id: 'add-review'
-      - else
-        | Please sign in to add a review
+      = render 'comments/link'
+      - if !@comments.nil?
+        = render 'comments/list'
       #add-review-modal.modal.fade aria-hidden='true' aria-labelledby='myModalLabel' role='dialog' tabindex='-1'
         .modal-dialog
           .modal-content
