[r] Modify link_to in order to create new line item

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -13,7 +13,7 @@ h1 Listing books
             = image_tag '../assets/no-star.png', class: 'star'
         p
           div.book-price
-            = link_to book.unit_price, store_index_path
+            = link_to book.unit_price, line_items_path(book_id: book.id), method: :post
 
 br
 .row
