--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,6 +14,9 @@ html
         .col-md-4
           #right-panel
             p
+              -if !session[:cart_id].nil?
+                = link_to 'CART', cart_path(id: session[:cart_id])
+            p
               = link_to 'BROWSE', store_index_path
             = render 'devise/sessions/sessions'
       .page-name-row
